* added store * util for jwt * added about handler
